feat: Refactor crypto monitoring system with enhanced error handling and new features
- Removed obsolete checkpoint files from crypto_consumer and crypto_consumer_test.
- Updated metadata IDs for crypto consumers.
- Enhanced InfluxDB client configuration in crypto_consumer_spark.py for synchronous writes and improved error handling.
- Modified Kafka producer settings in crypto_producer.py for better reliability and performance.
- Added new Grafana dashboards and provisioning files for crypto price visualization.
- Introduced scripts for testing Kafka producer functionality with realistic data.
- Created a Streamlit app skeleton for future integration with InfluxDB and Kafka.
- Added requirements for Streamlit and related libraries.